--- a/cafdec.vcxproj
+++ b/cafdec.vcxproj
@@ -82,12 +82,14 @@
   <ItemGroup>
     <ClCompile Include="AudioFileX.cpp" />
     <ClCompile Include="cafdec.cpp" />
+    <ClCompile Include="CAFDecoder.cpp" />
     <ClCompile Include="chanmap.cpp" />
     <ClCompile Include="strutil.cpp" />
     <ClCompile Include="utf8_codecvt_facet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioFileX.h" />
+    <ClInclude Include="CAFDecoder.h" />
     <ClInclude Include="chanmap.h" />
     <ClInclude Include="CoreAudio\AudioFile.h" />
     <ClInclude Include="CoreAudio\AudioFormat.h" />
