--- a/cafdec.vcxproj.filters
+++ b/cafdec.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="win32util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
