--- a/cafdec.vcxproj
+++ b/cafdec.vcxproj
@@ -55,8 +55,8 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>advapi32.lib;shlwapi.lib;CoreAudioToolbox.lib</AdditionalDependencies>
-      <DelayLoadDLLs>CoreAudioToolbox.dll</DelayLoadDLLs>
+      <AdditionalDependencies>advapi32.lib;shlwapi.lib;CoreAudioToolbox.lib;CoreFoundation.lib</AdditionalDependencies>
+      <DelayLoadDLLs>CoreAudioToolbox.dll;CoreFoundation.dll</DelayLoadDLLs>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -75,8 +75,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>advapi32.lib;shlwapi.lib;CoreAudioToolbox.lib</AdditionalDependencies>
-      <DelayLoadDLLs>CoreAudioToolbox.dll</DelayLoadDLLs>
+      <AdditionalDependencies>advapi32.lib;shlwapi.lib;CoreAudioToolbox.lib;CoreFoundation.lib</AdditionalDependencies>
+      <DelayLoadDLLs>CoreAudioToolbox.dll;CoreFoundation.dll</DelayLoadDLLs>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -99,6 +99,7 @@
     <ClInclude Include="CoreAudio\CoreFoundation.h" />
     <ClInclude Include="CoreAudio\ExtAudioFile.h" />
     <ClInclude Include="CoreAudio\MacTypes.h" />
+    <ClInclude Include="dl.h" />
     <ClInclude Include="ExtAudioFileX.h" />
     <ClInclude Include="strutil.h" />
     <ClInclude Include="util.h" />
